log
Wed 27 Mar 2024 08:14:30 PM UTC: 
 tests:  0|6
total_score: 0/70
938fc3e
Wed 27 Mar 2024 08:17:09 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
65a49e9
Wed 27 Mar 2024 08:18:38 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|0
25b3cbe
Wed 27 Mar 2024 08:25:34 PM UTC: 
 list.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:5: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   41 |     if(list==NULL) return NULL;.
      |     ^~
list.c:41:32: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   41 |     if(list==NULL) return NULL;.
      |                                ^
list.c:41:32: error: expected expression before ‘.’ token
cc1: all warnings being treated as errors
Compilation failed
81a47d4
Wed 27 Mar 2024 08:25:53 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5fce507
Wed 27 Mar 2024 08:27:29 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
b606450
Wed 27 Mar 2024 08:28:35 PM UTC: 
 list.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 25/70
bf837a2
Wed 27 Mar 2024 08:30:07 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
c06cb97
Wed 27 Mar 2024 08:31:01 PM UTC: 
 list.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
36819fb
Wed 27 Mar 2024 08:32:54 PM UTC: 
 list.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
8d0cc7c
Sun 31 Mar 2024 12:15:10 AM UTC: 
 list.c | 18 +++++++++++++++---
 1 file changed, 15 insertions(+), 3 deletions(-)
 tests:  10|2
total_score: 45/70
4a8b3f7
Sun 31 Mar 2024 12:16:23 AM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  10|2
total_score: 45/70
f27fa51
Sun 31 Mar 2024 12:18:34 AM UTC: 
 list.c | 19 +++++++++++++++----
 1 file changed, 15 insertions(+), 4 deletions(-)
 tests:  11|1
total_score: 55/70
21f1cb7
Sun 31 Mar 2024 01:04:40 AM UTC: 
 list.c | 57 +++++++++++++++++++++++++++++++++++++++++++++++++++------
 1 file changed, 51 insertions(+), 6 deletions(-)
In file included from test.c:5:
list.c: In function ‘popBack’:
list.c:164:12: error: unused variable ‘data’ [-Werror=unused-variable]
  164 |     void * data = aux->data;
      |            ^~~~
cc1: all warnings being treated as errors
Compilation failed
de10206
